# network-agent

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docker/lab/: README.md  docker-compose.yml
docs/: README.md
docs/design/: ARCHITECTURE_OVERVIEW.md  CALL_FLOW.md  PROMPT_TEMPLATES.md
docs/report/: PROJECT_REPORT.md  convert_report_to_pdf.py
docs/validation/: VALIDATION_ARTIFACTS.md
examples/: INTERACTIONS.md
examples/interactions/: connectivity_loss.json  dns_failure.json  transport_retransmits.json
gui/: README.md  chat_app.py  run_gui.bat  run_gui.sh
llm/: run_network_agent_chat.bat  run_network_agent_chat.py  run_network_agent_chat.sh  spin_llm.bat  spin_llm.sh
samples/: README.md
samples/connectivity_loss/: expected.json  logs.txt  pcap_summary.txt  ping.txt  prompt.txt  traceroute.txt
samples/dns_failure/: expected.json  logs.txt  pcap_summary.txt  ping.txt  prompt.txt  traceroute.txt
samples/routing_timeout/: expected.json  logs.txt  pcap_summary.txt  ping.txt  prompt.txt  traceroute.txt
samples/security_tls_block/: expected.json  logs.txt  pcap_summary.txt  ping.txt  prompt.txt  traceroute.txt
samples/transport_retransmits/: expected.json  logs.txt  pcap_summary.txt  ping.txt  prompt.txt  traceroute.txt
src/network_agent/: README.md  cli.py  (+2 more)
src/network_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: README.md  test_agent_llm_agents.py  test_engine.py  test_executor_live.py  test_llm_integration.py  test_planner.py  test_samples.py  test_validator.py
(+22 files in other folders)
